@@ -21,6 +21,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - Changed the SETGID wrappers to only pass those items in the environment
+      that are needed by the called scripts.  (LP: #1705736)
+
     - Fixed MTA/Postfix.py to ensure that created aliases(.db) and
       virtual-mailman(.db) files are readable by Postfix and the .db files are
       owned by the Mailman user.  (LP: #1696066)
